package edu.sbu.cse416.app.model.eavs;

public record VoterRegistration(Integer totalRegistered, Integer totalActive, Integer totalInactive) {}
