package edu.sbu.cse416.app.service;

import org.springframework.stereotype.Service;

@Service
public class EavsAggregationService {
    // function that takes in attribute returns total for state
}
